--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   device_preview: ^0.7.1
   font_awesome_flutter: ^9.0.0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
