--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   device_preview: ^0.7.1
   font_awesome_flutter: ^9.0.0
   http: ^0.13.3
+  google_fonts: ^2.1.0
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
